--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Trailproject1">
-        <activity android:name=".Wholesaler"></activity>
-        <activity android:name=".Retailer" />
-        <activity android:name=".Customer" />
-        <activity android:name=".AddDetails" />
-
-        <activity android:name=".Register">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".Customer"
+        android:parentActivityName = ".LoginActivity"/>
+
+        <activity android:name=".Retailer"
+            android:parentActivityName = ".LoginActivity"/>
+
+        <activity android:name=".Wholesaler"
+            android:parentActivityName = ".LoginActivity"/>
+
+        <activity android:name=".SignUp"
+            android:parentActivityName = ".LoginActivity"/>
+
         <activity android:name=".MainActivity" />
     </application>
 
