--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,25 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Trailproject1">
-        <activity android:name=".MeatWholesaler"></activity>
-        <activity android:name=".MeatRetailer" />
-        <activity android:name=".MeatCustomer" />
-        <activity android:name=".VegetablesWholesaler" />
-        <activity android:name=".VegetablesRetailer" />
-        <activity android:name=".VegetablesCustomer" />
-        <activity android:name=".FruitsWholesaler" />
-        <activity android:name=".FruitsRetailer" />
-        <activity android:name=".FruitsCustomer" />
-        <activity android:name=".MainMenuWholesaler" />
-        <activity android:name=".MainMenuRetailer" />
-        <activity android:name=".MainMenuCustomer" />
-        <activity android:name=".LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".Customer"
             android:parentActivityName=".LoginActivity" />
@@ -40,7 +23,56 @@
         <activity
             android:name=".SignUp"
             android:parentActivityName=".LoginActivity" />
-        <activity android:name=".MainActivity" />
+
+        <activity
+            android:name=".MeatWholesaler"></activity>
+        <activity
+            android:name=".MeatRetailer" />
+        <activity
+            android:name=".MeatCustomer" />
+        <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
+
+
+        <activity
+            android:name=".MainMenuCustomer" />
+        <activity
+            android:name=".FruitsCustomer"
+            android:parentActivityName=".MainMenuCustomer" />
+        <activity
+            android:name=".VegetablesCustomer"
+            android:parentActivityName=".MainMenuCustomer" />
+
+
+        <activity
+            android:name=".MainMenuRetailer" />
+        <activity
+            android:name=".FruitsRetailer"
+            android:parentActivityName=".MainMenuRetailer" />
+        <activity
+            android:name=".VegetablesRetailer"
+            android:parentActivityName=".MainMenuRetailer" />
+
+
+        <activity
+            android:name=".MainMenuWholesaler" />
+        <activity
+            android:name=".FruitsWholesaler"
+            android:parentActivityName=".MainMenuWholesaler"/>
+        <activity
+            android:name=".VegetablesWholesaler"
+            android:parentActivityName=".MainMenuWholesaler" />
+
+
+
+
     </application>
 
 </manifest>
