--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Trailproject1">
-
+        <activity android:name=".CustomerVegetableTomatoSelectPage" />
+        <activity android:name=".CustomerVegetableOnionSelectPage" />
         <activity android:name=".MainActivity" />
         <activity
             android:name=".Customer"
@@ -23,13 +24,9 @@
         <activity
             android:name=".SignUp"
             android:parentActivityName=".LoginActivity" />
-
-        <activity
-            android:name=".MeatWholesaler"></activity>
-        <activity
-            android:name=".MeatRetailer" />
-        <activity
-            android:name=".MeatCustomer" />
+        <activity android:name=".MeatWholesaler" />
+        <activity android:name=".MeatRetailer" />
+        <activity android:name=".MeatCustomer" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,40 +34,53 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
-
-        <activity
-            android:name=".MainMenuCustomer" />
+        <activity android:name=".MainMenuCustomer" />
         <activity
             android:name=".FruitsCustomer"
             android:parentActivityName=".MainMenuCustomer" />
         <activity
             android:name=".VegetablesCustomer"
             android:parentActivityName=".MainMenuCustomer" />
-
-
-        <activity
-            android:name=".MainMenuRetailer" />
+        <activity android:name=".MainMenuRetailer" />
         <activity
             android:name=".FruitsRetailer"
             android:parentActivityName=".MainMenuRetailer" />
         <activity
             android:name=".VegetablesRetailer"
             android:parentActivityName=".MainMenuRetailer" />
-
-
-        <activity
-            android:name=".MainMenuWholesaler" />
+        <activity android:name=".MainMenuWholesaler" />
         <activity
             android:name=".FruitsWholesaler"
-            android:parentActivityName=".MainMenuWholesaler"/>
+            android:parentActivityName=".MainMenuWholesaler" />
         <activity
             android:name=".VegetablesWholesaler"
             android:parentActivityName=".MainMenuWholesaler" />
 
+        <activity
+            android:name=".CustomerVegetableTomatoAddToCartPage"
+            android:parentActivityName=".VegetablesCustomer"/>
+        <activity
+            android:name=".CustomerVegetableOnionAddToCartPage"
+            android:parentActivityName="VegetablesCustomer"/>
+        <activity
+            android:name=".RetailerVegetableTomatoAddToCartPage"
+            android:parentActivityName=".VegetablesRetailer"/>
+        <activity
+            android:name=".RetailerVegetableOnionAddToCartPage"
+            android:parentActivityName="VegetablesRetailer"/>
+        <activity
+            android:name=".RetailerFruitOrangeAddToCartPage"
+            android:parentActivityName=".FruitsRetailer"/>
+        <activity
+            android:name=".RetailerFruitAppleAddToCartPage"
+            android:parentActivityName="FruitsRetailer"/>
 
+        <activity
+            android:name=".CustomerFruitOrangeAddToCartPage"
+            android:parentActivityName=".FruitsCustomer"/>
+        <activity
+            android:name=".CustomerFruitAppleAddToCartPage"
+            android:parentActivityName=".FruitsCustomer"/>
 
 
     </application>
