--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Trailproject1">
-        <activity android:name=".RetailerWholesalerMainActivity"></activity>
+        <activity android:name=".WholesalerSelector"></activity>
+        <activity android:name=".RetailerCustomerMainActivity" />
+        <activity android:name=".RetailerSelector" />
+        <activity android:name=".RetailerWholesalerMainActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
